# VJ_prinse_of_persia

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  Game.cpp  Game.h  Inputs.cpp  Inputs.h  MagicView.cpp  MagicView.h  Main.cpp  MenuMain.cpp  MenuMain.h  README.md  Readme.md  RunningGame.cpp  RunningGame.h  Settings.h  TextureManager.cpp  TextureManager.h  info.txt
2DGame/01-TBE/01-TBE/Debug/: vc120.idb
2DGame/01-TBE/01-TBE/Debug/01-TBE.tlog/: 01-TBE.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2DGame/01-TBE/Debug/: 01-TBE.ilk
2DGame/02-Bubble/02-Bubble/: 02-Bubble.vcxproj  02-Bubble.vcxproj.filters  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityMap.cpp  EntityMap.h  Game.cpp  Game.h  GameActor.cpp  GameActor.h  Gui.cpp  Gui.h  MainMenu.cpp  MainMenu.h  Pause.cpp  Pause.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  TileMap.cpp  TileMap.h  main.cpp
2DGame/02-Bubble/02-Bubble/Debug/: vc120.idb
2DGame/02-Bubble/02-Bubble/Debug/02-Bubble.tlog/: 02-Bubble.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  (+4 more)
2DGame/02-Bubble/02-Bubble/images/: tiles.xcf
2DGame/02-Bubble/02-Bubble/levels/: level01.txt  level01b.txt  level01e.txt  level01ef.txt  level01f.txt  level01test.txt  level01testb.txt  level01teste.txt  level01testf.txt  level02.txt  level02e.txt  level02ef.txt  level02f.txt  level02test.txt  level02testb.txt  level02teste.txt  level02testf.txt  level03.txt  level03b.txt  level03e.txt  level03ef.txt  level03f.txt
2DGame/02-Bubble/Debug/: 02-Bubble.ilk
